tests/golden/type_errors/generic_monomorphic_assignment.cd
fun identity<T>(value: T): T { return value; }
let typed: fun(number): number = identity;
