tests/golden/type_errors/generic_monomorphic_assignment.err
Type error at 2:5: cannot assign generic function to monomorphic function type
  let typed: fun(number): number = identity;
      ^
